# libuvc_android_native

./: CMakeLists.txt  README.md  build.sh  example.cc
include/libuvc/: libuvc.h
